--- a/app-service-historico/pom.xml
+++ b/app-service-historico/pom.xml
@@ -62,7 +62,11 @@
 			<artifactId>spring-graphql-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
