--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,14 +14,37 @@ services:
       - mariadb_data:/var/lib/mysql
       - ./mariadb/conf/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./mariadb/init/init.sql:/docker-entrypoint-initdb.d/init.sql
-
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "${MARIADB_USER}", "-p${MARIADB_PASSWORD}" ]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
+    networks:
+      - techchallenge-network
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.6.1  # Versão Fixa OK
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - techchallenge-network
+
+  kafka:
+    image: confluentinc/cp-kafka:7.6.1      # Versão Fixa OK
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      # Configura listeners: porta 29092 para uso interno (Docker) e 9092 para externo (seu PC)
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     networks:
       - techchallenge-network
 
@@ -38,15 +61,12 @@ services:
     ports:
       - "8081:8081"
     environment:
-      # Database Configuration
       SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/${MARIADB_DATABASE}?useSSL=false
       SPRING_DATASOURCE_USERNAME: ${MARIADB_USER}
       SPRING_DATASOURCE_PASSWORD: ${MARIADB_PASSWORD}
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MariaDBDialect
-      # JWT Configuration
       JWT_SECURITY_SECRET: ${JWT_SECRET:-404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970}
-      # Server Configuration
       SERVER_PORT: 8081
     networks:
       - techchallenge-network
@@ -60,17 +80,44 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      kafka: # Adicionado para garantir ordem de subida
+        condition: service_started
     ports:
       - "8082:8082"
     environment:
-      # Database Configuration
       SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/${MARIADB_DATABASE}?useSSL=false
       SPRING_DATASOURCE_USERNAME: ${MARIADB_USER}
       SPRING_DATASOURCE_PASSWORD: ${MARIADB_PASSWORD}
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MariaDBDialect
-      # Server Configuration
       SERVER_PORT: 8082
+      # ADICIONADO: Aponta para o endereço interno do Kafka
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+    networks:
+      - techchallenge-network
+
+  app-notificacao:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile-service-notificacao
+    container_name: app-service-notificacao
+    restart: on-failure
+    depends_on:
+      db:
+        condition: service_healthy
+      kafka: # Adicionado para garantir ordem de subida
+        condition: service_started
+    ports:
+      - "8084:8084"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/${MARIADB_DATABASE}?useSSL=false
+      SPRING_DATASOURCE_USERNAME: ${MARIADB_USER}
+      SPRING_DATASOURCE_PASSWORD: ${MARIADB_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.MariaDBDialect
+      SERVER_PORT: 8084
+      # ADICIONADO: Aponta para o endereço interno do Kafka
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
     networks:
       - techchallenge-network
 
@@ -88,8 +135,8 @@ services:
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
       KONG_PROXY_LISTEN: 0.0.0.0:8000
     ports:
-      - "8080:8000"  # Proxy do Kong
-      - "8001:8001"  # Admin API do Kong
+      - "8080:8000"
+      - "8001:8001"
     volumes:
       - ./kong-declarative-config.yml:/kong/declarative/kong.yml:ro
     depends_on:
@@ -104,7 +151,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
 
 networks:
   techchallenge-network:
