--- a/app-service-notificacao/src/main/resources/application.properties
+++ b/app-service-notificacao/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 spring.application.name=notificacao
 server.port=${SERVER_PORT:8084}
 spring.kafka.bootstrap-servers=localhost:9092
+
+# SendGrid Configuration
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.sendgrid.net
+
+# Email Configuration
+email.from=junior.ipmil@gmail.com
+
