--- a/app-service-notificacao/src/main/resources/application.properties
+++ b/app-service-notificacao/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
-spring.mail.password=
+spring.mail.password=#coloque_apikey_aqui
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
