--- a/docker/kong-declarative-config.yml
+++ b/docker/kong-declarative-config.yml
@@ -37,6 +37,26 @@ services:
           secret_is_base64: false
           run_on_preflight: true
 
+  # Serviço de Histórico
+  - name: historico-service
+    url: http://app-service-historico:8083
+    routes:
+      - name: historico-routes
+        paths:
+          - /graphql
+          - /graphiql
+        strip_path: false
+    plugins:
+      - name: jwt
+        config:
+          header_names:
+            - Authorization
+          claims_to_verify:
+            - exp
+          key_claim_name: iss
+          secret_is_base64: false
+          run_on_preflight: true
+
 consumers:
   - username: jwt-consumer
     jwt_secrets:
